--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,11 @@
         "doctrine/doctrine-migrations-bundle": "^3.4",
         "doctrine/orm": "^3.3",
         "geocoder-php/nominatim-provider": "5.8",
-        "messagebird/php-rest-api": "^3.1",
         "php-http/guzzle7-adapter": "*",
         "phpdocumentor/reflection-docblock": "^5.6",
         "phpoffice/phpspreadsheet": "^4.2",
         "phpstan/phpdoc-parser": "^2.1",
+        "stripe/stripe-php": "^17.1",
         "symfony/asset": "6.4.*",
         "symfony/asset-mapper": "6.4.*",
         "symfony/console": "6.4.*",
@@ -45,11 +45,14 @@
         "symfony/twig-bundle": "6.4.*",
         "symfony/ux-turbo": "^2.23",
         "symfony/validator": "6.4.*",
+        "symfony/vonage-notifier": "6.4.*",
         "symfony/web-link": "6.4.*",
         "symfony/yaml": "6.4.*",
+        "symfonycasts/verify-email-bundle": "^1.17",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0",
-        "twilio/sdk": "^8.5",
+        "twilio/sdk": "*",
+        "vonage/client": "*",
         "willdurand/geocoder": "4.6"
     },
     "config": {
