--- a/.env
+++ b/.env
@@ -17,6 +17,11 @@
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=176cc121453a024f6903284907f5ff31
+
+WKHTMLTOPDF_BINARY_PATH="C:\\Program Files\\wkhtmltopdf\\bin\\wkhtmltopdf.exe"
+
+WKHTMLTOIMAGE_BINARY_PATH="C:\Program Files\wkhtmltopdf\bin\wkhtmltoimage.exe"
+
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
