--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "doctrine/doctrine-migrations-bundle": "^3.4",
         "doctrine/orm": "^3.3",
         "geocoder-php/nominatim-provider": "5.8",
+        "knplabs/knp-snappy-bundle": "^1.10",
         "php-http/guzzle7-adapter": "*",
         "phpdocumentor/reflection-docblock": "^5.6",
         "phpoffice/phpspreadsheet": "^4.2",
