--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -17,6 +17,7 @@ security:
         main:
             lazy: true
             provider: app_user_provider
+            # ❌ anonymous: true → supprimé
             custom_authenticators:
                 - App\Security\Authenticator
             logout:
@@ -24,15 +25,13 @@ security:
                 target: app_login
 
     access_control:
-        - { path: ^/face-auth, roles: PUBLIC_ACCESS }
-        - { path: ^/connect, roles: PUBLIC_ACCESS }
-        - { path: ^/login, roles: PUBLIC_ACCESS }
-        - { path: ^/register, roles: PUBLIC_ACCESS }
-
-        # ✅ Ajoute ces trois lignes :
-        - { path: ^/forgot/password, roles: PUBLIC_ACCESS }
-        - { path: ^/forgot/verify-code, roles: PUBLIC_ACCESS }
-        - { path: ^/forgot/reset-password, roles: PUBLIC_ACCESS }
-
-        - { path: ^/, roles: ROLE_USER }
-
+    - { path: ^/face-auth, roles: PUBLIC_ACCESS }
+    - { path: ^/connect, roles: PUBLIC_ACCESS }
+    - { path: ^/login, roles: PUBLIC_ACCESS }
+    - { path: ^/register, roles: PUBLIC_ACCESS }
+    - { path: ^/forgot/password, roles: PUBLIC_ACCESS }
+    - { path: ^/forgot/verify-code, roles: PUBLIC_ACCESS }
+    - { path: ^/forgot/reset-password, roles: PUBLIC_ACCESS }
+    - { path: ^/admin, roles: ROLE_ADMIN }
+    - { path: ^/dashboard, roles: ROLE_ADMIN }
+    - { path: ^/, roles: [ROLE_USER, ROLE_ADMIN] }
